[gd_scene load_steps=5 format=3 uid="uid://pipe001"]

[ext_resource type="Script" path="res://scripts/pipe.gd" id="1_pipe"]
[ext_resource type="Texture2D" path="res://assets/images/pipe.png" id="2_pipe_texture"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_top"]
size = Vector2(100, 400)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bottom"]
size = Vector2(100, 400)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_score"]
size = Vector2(20, 200)

[node name="Pipe" type="Node2D"]
script = ExtResource("1_pipe")

[node name="TopPipe" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="TopPipe"]
rotation = 3.14159
scale = Vector2(1, 3)
texture = ExtResource("2_pipe_texture")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
shape = SubResource("RectangleShape2D_top")

[node name="BottomPipe" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="BottomPipe"]
scale = Vector2(1, 3)
texture = ExtResource("2_pipe_texture")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
shape = SubResource("RectangleShape2D_bottom")

[node name="ScoreArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
shape = SubResource("RectangleShape2D_score")
